--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "koa-mount": "1.3.0",
     "koa-rewrite": "1.1.1",
     "koa-router": "5.4.0",
+    "koa-cors": "0.0.16",
     "oidc-provider": "0.10.2",
     "path": "0.12.7",
     "querystring": "0.2.0",
